[tool.poetry]
name = "incolumepy.prospect.firebase-1647867120"
version = "0.3.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/prospect', from=''},
]
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
black = "^19.3b0"
isort = "^5.1"
pydocstyle = "^6.1.1"
pylint = "^2.1"
flake8 = "^4.0.1"
tox = "^3.24.5"
pytest-mock = "^3.0"
Sphinx = "^4.0"
furo = "^2022.3.4"
myst-parser = "^0.16"
mypy = "^0.941"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
